src/sass/_instance_list.scss
.instance-list {
  .instance-list-header {
    display: flex;
    margin: $spv--large 0;

    .instance-header-left {
      display: flex;
      flex-grow: 1;

      h4 {
        margin-right: 2rem;
      }

      .search-box {
        max-width: 20rem;
        width: 100%;
      }
    }

    .margin-right {
      margin-right: $sph--large;
    }

    .filter-type {
      min-width: 183px;
    }
  }

  .instance-content {
    padding-bottom: 0;
    padding-top: $spv--large;

    .p-notification--positive,
    .p-notification--negative {
      margin-bottom: $spv--large;
    }
  }

  .p-empty-instances {
    @include vf-icon-containers($color-mid-light);
  }

  .u-row:hover,
  .u-row-selected {
    background-color: $colors--light-theme--background-hover;
  }

  .clickable-cell {
    cursor: pointer;
  }

  // show actions only on hover for desktop sized screens
  @media screen and (min-width: 800px) {
    .u-instance-actions {
      visibility: hidden;
    }

    .u-row:hover {
      .u-instance-actions {
        visibility: visible;
      }
    }

    .u-row-selected:hover {
      .u-instance-actions {
        visibility: hidden;
      }
    }
  }

  .configurable-table-toggle {
    float: right;
    margin-bottom: -3.5rem;
  }

  .instance-table {
    margin-bottom: 0;

    td:last-child {
      padding-right: $sph--large;
    }

    .status-icon {
      margin-left: $spv--x-large;
    }

    .status-header {
      padding-left: 2.75rem;
    }

    tbody {
      display: block;
      height: calc(100vh - 146px);
      overflow-y: auto;
      scrollbar-gutter: stable;
    }

    thead,
    tbody tr {
      display: table;
      table-layout: fixed;
      width: 100%;
    }

    .name {
      width: 170px;
    }

    .type {
      width: 130px;
    }

    .description {
      width: 150px;
    }

    .ipv4 {
      width: 150px;
    }

    .ipv6 {
      width: 330px;
    }

    .status {
      width: 160px;
    }

    .snapshots {
      width: 100px;
    }

    .actions {
      width: 125px;
    }
  }

  .p-pagination__items {
    justify-content: flex-end;
  }

  #instance-table-measure {
    max-height: 1px;
    overflow: hidden;
  }

  .p-panel {
    min-height: auto;
  }
}

.table-column-select-list {
  min-width: 12rem;

  label {
    margin-left: 1rem;
  }
}

// hide filters on small screens
@media screen and (max-width: 1070px) {
  .filter-state,
  .filter-type,
  .search-box {
    display: none;
  }
}
@media screen and (max-width: 1430px) {
  .has-side-panel {
    .filter-state,
    .filter-type,
    .search-box {
      display: none;
    }
  }
}

.l-navigation.is-collapsed + .instance-list {
  @media screen and (min-width: 900px) {
    .filter-state,
    .filter-type,
    .search-box {
      display: flex;
    }
  }
  @media screen and (max-width: 1250px) {
    .has-side-panel {
      .filter-state,
      .filter-type,
      .search-box {
        display: none;
      }
    }
  }
}

